Fix textfield presentation on smaller screens

--- a/styles/sass/_booking-system.scss
+++ b/styles/sass/_booking-system.scss
@@ -351,6 +351,11 @@ form {
   min-height: 200px;
   min-width: 50%;
   padding: .6em;
+
+  @media (max-width: $screen-phone) {
+    width: 100%;
+  }
+
 }
 
 #conditions {
